# loco_hello

./: .gitignore  Cargo.toml  Makefile  README.md
config/: development.yaml  test.yaml
dockerfiles/postgres/: docker-compose.yaml
examples/: playground.rs  quick_dev_for_posts.rs
frontend/: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  tailwind.config.js  tailwind.css
frontend/assets/styling/: blog.css  main.css  navbar.css
frontend/src/: error.rs  main.rs  routes.rs
frontend/src/components/: mod.rs  navbar.rs
frontend/src/components/form/: form_button.rs  mod.rs
frontend/src/pages/blog/: post_create.rs  post_list.rs
frontend/src/pages/demos/: dynamic_rendering.rs  event_handler.rs  llm.rs  mod.rs
frontend/src/views/demos/: mod.rs
migration/src/: lib.rs  m20241113_065545_posts.rs  m20241113_132948_files.rs
src/: app.rs
src/controllers/: auth.rs  file.rs  mod.rs
src/models/: mod.rs
src/models/_entities/: files.rs  posts.rs  users.rs
tests/models/: posts.rs  users.rs
tests/requests/: auth.rs  post.rs  prepare_data.rs
tests/tasks/: seed.rs
